# bird-iot-platform

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  activate_env  colors.mk  docker-make.sh  templates.mk
bird_iot/: CMakeLists.txt  IotApp.cpp  IotApp.h  Kconfig.projbuild  main.cpp
bird_iot/include/: IotPlugin.h  alerts.h  builtin.h  certs.h  certs_private.h  common.h  logging.h  loglevels.h  macros.h  my_types.h  plugins_inc.h  priorities.h  private.h  profiling.h  rtos.h  sizes.h  times.h  topics.h
bird_iot/include/fonts/: dejavu_sans.h  dejavu_sans_mono.h  dialoginput.h  dseg7_classic_mini.h  meteocons.h  open_sans_condensed.h  open_sans_condensed_light.h  orbitron.h  permanent_marker.h  roboto.h  roboto_condensed.h  roboto_mono.h  walter_turncoat.h
bird_iot/modes/: RunMode.cpp  RunMode.h  Runtime.cpp  Runtime.h  SafeMode.cpp  SafeMode.h  SpektrumDeviceMode.cpp  SpektrumDeviceMode.h
bird_iot/plugins/ble/: BLEBeaconPlugin.cpp  BLEBeaconPlugin.h  BLEKeyboardPlugin.cpp  BLEKeyboardPlugin.h  NimBLEPlugin.cpp  NimBLEPlugin.h
bird_iot/plugins/buttons/: ButtonPlugin.cpp  ButtonPlugin.h  IotButton.cpp  IotButton.h
bird_iot/plugins/command/: CommandPlugin.cpp  CommandPlugin.h  ConsoleHelper.cpp  ConsoleHelper.h  ConsolePlugin.cpp  ConsolePlugin.h
bird_iot/plugins/device/: DevicePlugin.cpp  DevicePlugin.h  HeartbeatTask.cpp  HeartbeatTask.h
bird_iot/plugins/displays/: DeviceIdOverlay.cpp  DeviceIdOverlay.h  DisplayManager.cpp  DisplayManager.h  DisplayUI.h  Drawable.h  LcdDriver.cpp  LcdDriver.h  OledDisplayPlugin.cpp  OledDisplayPlugin.h  SPIDisplayPlugin.cpp  SPIDisplayPlugin.h  TFTDisplayPlugin.cpp  TFTDisplayPlugin.h  TftHelpers.cpp  TftHelpers.h  VoltageOverlay.cpp  VoltageOverlay.h  oled_fonts.h  oled_icons.h  tft_includes.h
bird_iot/plugins/garage/: GaragePlugin.cpp  GaragePlugin.h
bird_iot/plugins/gps/: GpsPlugin.cpp  GpsPlugin.h  gps_commands.h
bird_iot/plugins/http/: CameraServerPlugin.cpp  CameraServerPlugin.h  HTTPSServerPlugin.cpp  HTTPSServerPlugin.h
bird_iot/plugins/hw/: HobbywingTaskPlugin.cpp  (+1 more)
bird_iot/rtos/: Lockable.cpp  Lockable.h  LockableQueue.h  lock_macros.h  xprintf.cpp  xprintf.h
bird_iot/streams/: BufferedStreamJoiner.cpp  BufferedStreamJoiner.h  DirectStreamJoiner.cpp  DirectStreamJoiner.h  StringBufferedStream.cpp  StringBufferedStream.h
bird_iot/tasks/: TaskClass.cpp  TaskClass.h
bird_iot/util/: CircularBuffer.h  FloatStats.cpp  FloatStats.h  Profile.cpp  Profile.h  colors.cpp  colors.h  helpers.cpp  helpers.h  prefs.cpp  prefs.h
components/neopixelbus/: CMakeLists.txt
components/pn532/: CMakeLists.txt
(+1087 files in other folders)
